--- a/example/example.html
+++ b/example/example.html
@@ -7,20 +7,10 @@
   
   <link rel="stylesheet" href="stylesheets/gui.css" type="text/css" media="screen" title="timeframe" charset="utf-8"/>
   <link rel="stylesheet" href="stylesheets/timeframe.css" type="text/css" media="screen" title="timeframe" charset="utf-8"/>
-  <!--[if lt IE 8]>
-    <style type="text/css" media="screen">
-      div.timeframe_calendar li a, div.timeframe_calendar table {
-        display: inline;
-      }
-    </style>
-  <![endif]-->
-  <!--[if lt IE 7]>
-    <link rel="stylesheet" href="stylesheets/ie6.css" type="text/css" media="screen" title="ie6" charset="utf-8"/>
-  <![endif]-->
 </head>
 <body>
   <div id="page_container">
-    <h1><a href="http://github.com/stephencelis/timeframe">Timeframe</a><small>, by Stephen Celis</small></h1>
+    <h1><a href="http://github.com/ktkonrad/timeframe">Timeframe</a><small>, by Stephen Celis and Kyle Konrad</small></h1>
     <p>
       <em>Click-draggable. Range-makeable. A better calendar.</em>
     </p>
@@ -29,7 +19,8 @@
       The code:
     </h2>
     <pre><code>
-      new Timeframe(element, options);
+      var timeframe = new Timeframe();
+      timeframe.initialize(element, options);
     </code></pre>
     <h3>
       Options available:
@@ -57,16 +48,12 @@
     <h3>
       Notes:
     </h3>
-    <ul>
-      <li>I&rsquo;m just sick of multiple date pickers on the same page.</li>
-    </ul>
+    <p>
+      Timeframe was originally created by <a href="http://stephencelis.com">Stephen Celis</a> using Prototype. This is a port from Prototype to jQuery. It is direly in need of some code cleanup</li>
+    </p>
     <h2 id="example_information">
       An example:
     </h2>
-    <ul>
-      <li>A little bit slow in IE. Optimizations forthcoming.</li>
-      <li>Try <a href="http://apple.com/safari">Safari</a> for the best experience.</li>
-    </ul>
     <div id="example">
       <h4>Please select a date range below:</h4>
       <div id="calendars"></div>
@@ -87,29 +74,24 @@
       Generated from this code (see the source for more detail):
     </p>
     <pre><code>
-      &lt;script type=&quot;text/javascript&quot; charset=&quot;utf-8&quot;&gt;
-        //&lt;![CDATA[
-          new Timeframe(&#x27;calendars&#x27;, {
-            startField: &#x27;start&#x27;,
-            endField: &#x27;end&#x27;,
-            earliest: new Date(),
-            resetButton: &#x27;reset&#x27; });
-        //]]&gt;
-      &lt;/script&gt;
+      var timeframe = new Timeframe();
+      timeframe.initialize(window.calendars, {
+        earliest: new Date(),
+        resetButton: $('#reset'),
+        startField: $('#start'),
+        endField: $('#end')
+      });
     </code></pre>
     <h2>Contribution:</h2>
     <p>
        Timeframe is open source and available for forking, pushing, and pulling at <a href="http://github.com">Github</a>:
     </p>
     <p>
-      <a href="http://github.com/stephencelis/timeframe">http://github.com/stephencelis/timeframe</a>
-    </p>
-    <p>
-      If you find Timeframe useful, please feel free to leave a donation:
-      <a href='http://pledgie.org/campaigns/799'><img alt='Click here to lend your support to: timeframe and make a donation at www.pledgie.com !' src='http://www.pledgie.com/campaigns/799.png?skin_name=chrome' border='0'/></a> 
+      <a href="http://github.com/ktkonrad/timeframe">http://github.com/ktkonrad/timeframe</a>
     </p>
     <h3>Thanks:</h3>
     <ul>
+      <li><a href="http://stephencelis.com">Stephen Celis (&ldquo;stephencelis&rdquo;)</a></li>
       <li><a href="http://alternateidea.com">Justin Palmer (&ldquo;Caged&rdquo;)</a></li>
       <li><a href="http://codetocustomer.com/blog">Nik Wakelin (&ldquo;codetocustomer&rdquo;)</a></li>
       <li><a href="http://zencocoon.com">Sébastien Grosjean (&ldquo;ZenCocoon&rdquo;)</a></li>
@@ -120,18 +102,15 @@
       <script type="text/javascript">
       //<![CDATA[
       document.write(
-"<n uers=\"znvygb:fgrcura\100fgrcurapryvf\056pbz\">fgrcura\100fgrcurapryvf\056pbz<\057n>".replace(/[a-zA-Z]/g, function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);}));
+"<n uers=\"znvygb:xlyr\100xlyrxbaenq\056pbz\">xlyr\100xlyrxbaenq\056pbz<\057n>".replace(/[a-zA-Z]/g, function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);}));
         //]]>
       </script>.
     </p>
     <p>
-      Learn more about me at <a href="http://stephencelis.com">stephencelis.com</a>.
-    </p>
-    <p>
-      Copyright &copy; 2008 Stephen Celis. Provided under the MIT License.
+      Copyright &copy; 2012 Kyle Konrad. Provided under the MIT License.
     </p>
   </div>
-  <script type="text/javascript" charset="utf-8" src="scripts/prototype.js"></script>
+  <script type="text/javascript" charset="utf-8" src="http://code.jquery.com/jquery-latest.min.js"></script>
   <script type="text/javascript" charset="utf-8" src="../timeframe.js"></script>
   <script type="text/javascript" charset="utf-8">
     //<![CDATA[
