added date.js to example, other fixes fixed SetRange and text field observer

--- a/example/example.html
+++ b/example/example.html
@@ -113,6 +113,7 @@
     </p>
   </div>
   <script type="text/javascript" charset="utf-8" src="http://code.jquery.com/jquery-latest.min.js"></script>
+  <script type="text/javascript" charset="utf-8" src="date.js"></script>
   <script type="text/javascript" charset="utf-8" src="../timeframe.js"></script>
   <script type="text/javascript" charset="utf-8">
     //<![CDATA[
@@ -122,7 +123,8 @@
         resetButton: $('#reset'),
         startField: $('#start'),
         endField: $('#end'),
-        minRange: 2
+        minRange: 2,
+        format: 'ddd MMM d'
     });
   </script>
 </body>
